# VRCC

./: .gitignore  DEVELOPING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml  tests.yml
benchmarks/: README.md  RESULTS.md  rtx-5090-ryzen-9950x3d.json
packaging/: launch.py  vrcc.spec
scripts/: smoke_e2e.py
tests/: conftest.py  onnx_asr_fakes.py  stt_fakes.py  test_app_language_default.py  test_app_main_window.py  test_app_reloader.py  test_app_reloader_force.py  test_app_window_swap.py  test_app_wiring.py  test_audio_devices.py  test_audio_source.py  test_audio_source_frames.py  test_bridge.py  test_bus.py  test_caption_log.py  test_chatbox.py  test_chatbox_overflow.py  test_chatbox_partial.py  test_chatbox_reconfigure.py  test_cli.py  test_config.py  test_config_paths.py  test_denoise.py  test_denoise_asset.py  test_download.py  test_firstrun_device_ui.py  test_firstrun_ui.py  test_gain.py  test_hardware.py  test_i18n.py  test_icon.py  test_language_nudge.py  test_languages.py  test_live_apply.py  test_live_apply_denoise.py  test_logging_setup.py  test_main_window_ui.py  test_model_fit.py  test_model_labels.py  test_models_dialog_ui.py  (+47 more)
tests/fixtures/denoise/: golden.npz
tests/integration/: _harness.py  conftest.py  test_denoise_accuracy.py  test_e2e_pipeline.py  test_f4_segmentation.py  test_live_sentence_captions.py  test_stt_accuracy.py  test_translate_real.py
tests/integration/audio/noisy/: manifest.json
tools/: bench_report.py  bench_stt.py  denoise_realnoise_gate.py  make_icon.py  render_ui.py  walkthrough_shots.py
tools/walkthrough/: package-lock.json  package.json  remotion.config.ts
tools/walkthrough/src/: Cards.tsx  Root.tsx  ScreenSegment.tsx  Walkthrough.tsx  fades.ts  theme.ts
vrcc/: app.py  cli.py
vrcc/audio/: GTCRN_LICENSE.txt  denoise.py  devices.py  gain.py  segmenter.py  source.py  stft.py  vad.py
vrcc/core/: bus.py  config.py  energy_gate.py  engine_stack.py  events.py  hardware.py  languages.py  live_apply.py  logs.py  pipeline.py  pipeline_frames.py  pipeline_jobs.py  pipeline_send.py  pipeline_source.py  pipeline_state.py  pipeline_typed.py  recommend.py  reloading.py  sentences.py  startup.py  updates.py
vrcc/download/: manager.py
vrcc/gui/: bridge.py  caption_log.py  firstrun.py  icons.py  log_follow.py  main_parts.py  main_window.py  model_fit.py  model_labels.py  model_prompts.py  models_dialog.py  settings.py  settings_advanced.py  settings_audio.py  settings_live.py  settings_pages.py  settings_reset.py  status_render.py  style.py  updates_ui.py  widgets.py
vrcc/i18n/: __init__.py  de.json  es.json  extract.py  fr.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  qt.py  ru.json  th.json  tr.json  uk.json  vi.json  zh-Hans.json  zh-Hant.json
vrcc/osc/: chatbox.py  chatbox_format.py  mutesync.py  mutesync_server.py  vrchat_detect.py
vrcc/stt/: __init__.py  engine.py  onnx_asr.py  parakeet.py  registry.py
vrcc/translate/: engine.py  registry.py  tokenizers.py
